<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Best Fuel</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>

    <string name="title_activity_map">MapActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_profile">ProfileActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btn_plan">Plan a Route</string>
    <string name="btn_get_gas_now">Get Gas Now</string>
    <string name="btn_profile">Profile</string>

    <string name="info">username</string>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="year">Year</string>


</resources>